# smartcupleague-v1

./: AGENTS.md  README.md
api/: requirements.txt
api/app/: main.py
api/app/core/: config.py  dependencies.py  exceptions.py
api/app/repositories/: leaderboard_repository.py
api/app/schemas/: prices.py
api/app/services/: leaderboard_service.py  price_service.py
api/app/supabase/: schema.sql
backend/: .gitignore
backend/app/api/: router.py
backend/app/repositories/: price_repository.py
backend/supabase/: schema.sql
frontend/: .env.txt  index.html  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  app-layout.css  main.tsx  styles.css
oracle-server/: .env.txt  .gitignore  .render.yaml  README.md  package.json
oracle-server/data/: kick-off-map.json  match-mapping.json
oracle-server/src/: bolao.ts  oracle.ts  server.ts
smart-programs/BolaoCore-Program/: .binpath  Cargo.toml  README.md  build.rs  rust-toolchain.toml
smart-programs/BolaoCore-Program/app/: Cargo.toml
smart-programs/BolaoCore-Program/app/src/: lib.rs
smart-programs/BolaoCore-Program/app/src/services/: constants.rs  events.rs  mod.rs  service.rs  state.rs  types.rs  utils.rs
smart-programs/BolaoCore-Program/client/: Cargo.toml  build.rs
smart-programs/BolaoCore-Program/client/src/: bolao_client.rs  lib.rs
smart-programs/BolaoCore-Program/src/: lib.rs
smart-programs/BolaoCore-Program/tests/: test.rs  utils.rs
smart-programs/BolaoCore-Program/tests/fixture/: mod.rs
smart-programs/BolaoCore-Program/wasm/: .binpath  build.rs  template.idl  template_client.rs
smart-programs/DAO-SmartCupLeague-Program/: .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  README.md
smart-programs/Oracle-Program/: .binpath  Cargo.toml  README.md  build.rs  rust-toolchain.toml
smart-programs/Oracle-Program/.github/workflows/: gitpod-image.yml
smart-programs/Oracle-Program/app/: Cargo.toml
smart-programs/Oracle-Program/app/src/: lib.rs
smart-programs/Oracle-Program/app/src/services/: constants.rs  errors.rs  events.rs  mod.rs  service.rs  state.rs  types.rs  utils.rs
smart-programs/Oracle-Program/client/: Cargo.toml  build.rs
smart-programs/Oracle-Program/client/src/: lib.rs  oracle_client.rs
smart-programs/Oracle-Program/src/: lib.rs
smart-programs/Oracle-Program/tests/: test.rs  utils.rs
smart-programs/Oracle-Program/tests/fixture/: mod.rs
smart-programs/Oracle-Program/wasm/: .binpath  Cargo.toml  template.idl  template_client.rs
smart-programs/Oracle-Program/wasm/src/: lib.rs
smart-programs/Oracle-Program/wasm/tests/: gtest.rs
(+104 files in other folders)
