[package]
name = "oracle-program"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[workspace]
resolver = "2"
members = ["app", "client"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[workspace.dependencies]
gstd = "1.10.0"
sails-rs = "0.10.2"
sails-client-gen = "0.10.2"
sails-idl-gen = "0.10.2"
tokio = { version = "1.41", features = ["rt", "macros"] }

[dependencies]
oracle-client = { path = "client", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
oracle-app = { path = "app" }

[build-dependencies]
oracle-app = { path = "app" }
sails-rs = { version = "0.10.2", features = ["wasm-builder"] }
sails-idl-gen.workspace = true
sails-client-gen.workspace = true

[dev-dependencies]
oracle-program = { path = ".", features = ["wasm-binary", "oracle-client"] }
sails-rs = { version = "0.10.2", features = ["gtest"] }
tokio.workspace = true

[features]
wasm-binary = []
std = []
oracle-client = ["dep:oracle-client"]
